[project]
name = "ask-my-biblio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix",
    "arize-phoenix-otel",
    "chainlit",
    "langchain",
    "langchain-chroma",
    "langchain-community",
    "langchain-core",
    "langchain-google-genai",
    "langchain-huggingface",
    "langchain-text-splitters",
    "openinference-instrumentation-langchain",
    "sentence-transformers",
]
